--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,7 +1,7 @@
 body{
 	margin:0;
 	color:#6a6f8c;
-	background:#f1f1f1;
+	background:white;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -69,7 +69,7 @@ a{color:inherit;text-decoration:none}
 #header {
 	display: block;
 	width: 100%;
-	height: 49px;
+	height: 60px;
 	padding: 0;
 	margin: auto;
 	border-top: 1px solid #CCC;
