--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -65,6 +65,7 @@ a{color:inherit;text-decoration:none}
 	width:1280px; height: 100%;
 	margin:0 auto;
 	position: relative;
+	
 }
 #header {
 	display: block;
@@ -85,12 +86,29 @@ a{color:inherit;text-decoration:none}
 	-webkit-box-shadow: 0 1px 3px #666;
 	-moz-box-shadow: 0 1px 3px #666;
 	box-shadow: 0 1px 3px #666;
-
+	
 }
 
+#header #leftLogo{
+	
+	
+	
+	text-align: left;
+	margin-left: 10px;
+	float: left;
+	height: 49px;
+	line-height: 49px;
+	color:#ffffff;
+	font-family: sans-serif;
+	
+}
+
+
 #header #logo {
+	
 	padding-left:20px;
 	padding-right:20px;
+	margin-left:50px;
 	float: left;
 	height: 49px;
 	line-height: 49px;
@@ -107,6 +125,7 @@ a{color:inherit;text-decoration:none}
 	float: right;
 	overflow: auto;
 	margin-right: 20px;
+	
 }
 
 #header #menu ul {
