디자인 변경 및 footer 구현

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -70,7 +70,7 @@ a{color:inherit;text-decoration:none}
 #header {
 	display: block;
 	width: 100%;
-	height: 5.3%;
+	height: 6%;
 	padding: 0;
 	margin: auto;
 	border-top: 1px solid #CCC;
@@ -94,7 +94,7 @@ a{color:inherit;text-decoration:none}
 	
 	
 	
-	text-align: left;
+	text-align: left;p
 	margin-left: 10px;
 	float: left;
 	height: 49px;
